# pen

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
pen_writer/: main.py
templates/: home.html
